@@ -9,6 +9,7 @@ revision history for NetPacket
 
  [ENHANCEMENTS]
  - NetPacket::USBMon refactoring/code clean-up.
+ - Add hardware constants for NetPacked::ARP.
 
  [NEW FEATURES]
 
